@@ -6,7 +6,8 @@ All issue numbers are relative to https://github.com/Toblerity/Fiona/issues.
 1.9.4 (June 2023)
 -----------------
 
-- Bytes type feature properties are now encoded using base64 when serializing to GeoJSON.
+- Bytes type feature properties are now hex encoded when serializing to GeoJSON
+  (#1263).
 - Docstrings for listdir and listlayers have been clarified and harmonized.
 - Nose style test cases have been converted to unittest.TestCase (#1256).
 - The munch package used by fio-filter and fio-calc is now vendored and patched
